prevent sidebar width from shifting to fit content

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 10rem;
 }
 
 .breed-name-text {
